bk_ida/gccida/g1/init_propagate_block_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2269:4: error: expected ';' after expression
rtx v18; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2269:5: error: use of undeclared identifier 'v18'
rtx v18; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2270:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2270:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2286:28: error: expected expression
v10->reg_next_use = ( rtx *)xcalloc( v15, 8uLL); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2303:45: error: expected ')'
for ( i = bb->end; bb->head != i; i = ( rtx)i[1] ) 
                                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2303:5: note: to match this '('
for ( i = bb->end; bb->head != i; i = ( rtx)i[1] ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2307:1: error: use of undeclared identifier 'v18'
v18 = ( rtx)i[2]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2308:17: error: use of undeclared identifier 'v18'
if ( *( _WORD *)v18 == 47 || ( v18 = single_set_2( i, v18)) != 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2308:55: error: use of undeclared identifier 'v18'
if ( *( _WORD *)v18 == 47 || ( v18 = single_set_2( i, v18)) != 0LL ) 
                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2308:32: error: use of undeclared identifier 'v18'
if ( *( _WORD *)v18 == 47 || ( v18 = single_set_2( i, v18)) != 0LL ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2310:7: error: use of undeclared identifier 'v18'
rtx = v18->fld[0].rtx; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2313:1: error: use of undeclared identifier 'v19'
v19 = canon_rtx( rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2314:21: error: use of undeclared identifier 'v19'
if ( ( *( ( _BYTE *)v19 + 3) & 4) == 0 ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2316:24: error: use of undeclared identifier 'v19'
v20.rtwint = ( __int64)v19->fld[0]; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2319:29: error: expected expression
&& global_rtl[3] == *( rtx *)( v20.rtwint + 8) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/flow.c:2322:27: error: use of undeclared identifier 'v19'
add_to_mem_set_list( v10, v19); 
                          ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_propagate_block_info/src/obj/flow.o] Error 1
